# fastapi-auth-service

./: .env.exmaple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: app_base_model.py  config.py  di.py  lifespan.py  openapi.py  public_router.py  session_context.py
app/domain/exceptions/: already_exists_exception.py  not_found_exception.py
app/domain/repositories/: base_repository.py
app/domain/services/: cache.py  cache_client.py
app/infrastructure/cache/: redis_client.py  redis_service.py
app/infrastructure/database/: async_engine.py  async_sessionmaker.py  base.py  events.py  importer.py  mixins.py  session.py
app/infrastructure/repositories/: base_repository.py
app/modules/auth/application/dtos/: user_dto.py
app/modules/auth/domain/entities/: user.py
app/modules/auth/domain/exceptions/: invalid_credentials.py  invalid_token_sub.py  invalid_token_type_exception.py  revoked_token_exception.py  token_exception.py  token_user_mismatch_exception.py  user_already_exists_exception.py  user_not_found_exception.py
app/modules/auth/domain/repositories/: user_repository.py
app/modules/auth/domain/services/: token_blacklist_service.py  user_uniqueness_checker.py
app/modules/auth/infrastructure/http/: response_token_builder.py  token_pair_dto.py
app/modules/auth/infrastructure/security/: jwt_service.py  (+1 more)
app/presentation/: api_router.py
app/presentation/middlewares/: error_handler_middleware.py
app/tests/: test_helthcheck.py
migrations/: env.py
migrations/versions/: cea5b13e3edd_add_user_table.py
(+32 files in other folders)
